pick friends in the works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,11 @@
   </div>
 </div>
 <div class="container">
+  <% flash.each do |type, message| %>
+      <div class="flash">
+       <%= message %>
+    </div>        
+  <% end %> 
      <%= yield %>
 </div>
 
