--- a/app/views/friend_pages/_new_friend.erb
+++ b/app/views/friend_pages/_new_friend.erb
@@ -1,4 +1,4 @@
-<%= form_tag("add_page", :method => "post") do |f| %>
+<%= form_tag("friend_pages", :method => "post") do |f| %>
   <div class="field">
     <%= hidden_field_tag(:fb_id, @id) %>
   </div>
