--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
 <div class='navbar'>
   <div class='navbar-inner'>
   <ul class='nav'>
-    <li><%= link_to 'Home', root_path %></li>
   <% if user_signed_in? %>
     <li><%= image_tag @picture %></li>
+    <li><%= link_to 'Home', root_path %></li>
+    <li><%= link_to 'Pick Friends', pick_friends_path %></li>
     <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
   <% else %>
-    <li><%= link_to "Sign In", user_session_path %></li>
+    <li><%= link_to 'Home', root_path %></li>
+    <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
    <% end %>
   </ul>
   </div>
