--- a/app/views/friend_pages/_new_friend.erb
+++ b/app/views/friend_pages/_new_friend.erb
@@ -6,6 +6,9 @@
     <%= hidden_field_tag(:user_id, current_user.id) %>
   </div>
   <div class="field">
+    <%= hidden_field_tag(:img, @img) %>
+  </div>
+  <div class="field">
     <%= hidden_field_tag(:has_page, true) %>
   </div>
   <div class="field">
