--- a/app/views/friend_pages/_new_friend.erb
+++ b/app/views/friend_pages/_new_friend.erb
@@ -15,7 +15,7 @@
     <%= hidden_field_tag(:name, @name) %>
   </div>
   <div class='actions'>
-    <%= submit_tag("Create Page") %>
+    <%= submit_tag "Create Page", :class => "btn" %>
   </div>
 <% end %>
 
