--- a/app/views/friend_pages/edit.html.erb
+++ b/app/views/friend_pages/edit.html.erb
@@ -3,18 +3,15 @@
     <%= image_tag @friend_page.img, :class => 'img-rounded' %>
   </div>
   <div class="span9">
-    <h1>Me and <%= @friend_page.name %> met at 
-      <% if @friend_page.location.nil? %>
-        ______
-      <% else %>
-          <%= @friend_page.location %>
-        <% end %>
-  </h1>
+<%= form_for @friend_page do |f| %>
+    <h1>Me and <%= @friend_page.name %> met at     <%= f.text_field :location%></h1>
   </div>
 </div>
 <div class="row-fluid">
     <div class="notes">
     <h1>Notes</h1>
-    <p><%= @friend_page.notes %></p>
+  <%= f.text_area :notes %>  
     </div>
 </div>
+  <%= f.submit "Done Editing" %>
+<% end %>
