--- a/app/views/friend_pages/show_friend.html.erb
+++ b/app/views/friend_pages/show_friend.html.erb
@@ -17,4 +17,5 @@
     <h1>Notes</h1>
     <p><%= @friend_page.notes %></p>
     </div>
+    <button class="btn btn-warning"><a href="/friend_pages/<%= params[:fb_id] %>/edit">Edit Page</a></button>
 </div>
