fixed sql query using where rails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <% if user_signed_in? %>
         <ul>
           <div class="btn-group btn-group-vertical">
-        <% FriendPage.find(current_user.id).each do |f| %>
+            <% FriendPage.where("user_id = ?", current_user.id).each do |f| %>
           <% unless f.has_page.nil? %>
             <li><a class="btn btn-length" href="/friend_pages/<%= f.fb_id %>"><%= truncate(f.name, :length => 14) %></a></li>
         <% end %>
