--- a/app/views/friend_pages/show_friend.html.erb
+++ b/app/views/friend_pages/show_friend.html.erb
@@ -13,9 +13,9 @@
   </div>
 </div>
 <div class="row-fluid">
-    <div class="notes">
+  <div class="span9">
     <h1>Notes</h1>
-    <p><%= @friend_page.notes %></p>
-    </div>
+    <p class="lead"><%= @friend_page.notes %></p>
     <button class="btn btn-warning"><a href="/friend_pages/<%= params[:fb_id] %>/edit">Edit Page</a></button>
+  </div>
 </div>
