--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,16 @@
-.notes p {
-  text-size:50px !important;
-}
 form {
   padding: 5px;
 }
-
+p {
+  word-wrap: break-word;
+}
+.uses {
+}
+.uses img {
+  border-radius: 15px;
+  width:100%;
+  height:auto;
+}
 .thumbnail div {
   padding: 5px;
   width:95%;
@@ -16,6 +22,7 @@ form {
 }
 h1 {
   padding:20px;
+  font-family: 'Peralta', cursive;
 }
 .btn-length {
   width:70%; 
