--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Facenote</title>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700|Peralta' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -25,7 +26,7 @@
 </div>
   <div class="container-fluid">
     <div class="span2">
-          <h5>Friend Pages</h4>
+          <h3>Friend Pages</h3>
         <% if user_signed_in? %>
         <ul>
           <div class="btn-group btn-group-vertical">
