--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,3 +1,21 @@
 <div class='hero-unit'>
   <h1>Make Notes of your friends</h1>
 </div>
+<div class="row-fluid">
+  <div class="span4 uses">
+     <div class="media">
+        <img class="media-object" src="assets/name.jpg" >
+        <br />
+      <div class="media-body">
+        <h4 class="media-heading">Use this tool to remember friends</h4> 
+      </div>
+    </div>
+  </div>
+  <div class="span4 uses">
+    <h2>this is another use</h2>
+  </div>
+  <div class="span4">
+    <h2>another reason to use it</h2>
+  </div>
+</div>
+
